Fix: login interface not showing version anymore. Fix: broken create new page template.

--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -414,27 +414,34 @@ a:hover {
 }
 
 .ui-page-form input[type=submit]{
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-	border-radius: 5px;
-	-moz-box-shadow: 1px 1px 2px #343434;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
+	-moz-box-shadow: 0px 0px 2px #343434;
 	box-shadow: 1px 1px 2px #343434;
 	-webkit-box-shadow: 1px 1px 2px #343434;
 	padding: 2px 20px;
 	font: 11pt "Trebuchet MS";
-	border: 2px solid #656565;
-	
+	border: 1px solid #9a9a9a;	
 	text-shadow: 1px 1px 2px #323232;
 	cursor: pointer;
 	margin-right: 5px; 
 }
 
 .ui-page-form input[type=submit], .ui-page-form input[type=submit][disabled]{
-	background: -moz-linear-gradient(center bottom,   rgb(145,145,145) 47%,   rgb(186,186,186) 74%,   rgb(227,227,227) 87%);
-	background: -webkit-gradient( linear, left bottom, left top,
-		color-stop(0.47, rgb(145,145,145)),
-		color-stop(0.74, rgb(186,186,186)), color-stop(0.87, rgb(227,227,227)));
-	color: #dedede;
+	background: -webkit-gradient(
+	    linear,
+	    left bottom,
+	    left top,
+	    color-stop(0.79, rgb(128,128,128)),
+	    color-stop(1, rgb(207,207,207))
+	);
+	background: -moz-linear-gradient(
+	    center bottom,
+	    rgb(128,128,128) 79%,
+	    rgb(207,207,207) 100%
+	);
+	color: #d3d3d3;
 }
 
 .ui-page-form input[type=submit][disabled]{
@@ -443,7 +450,7 @@ a:hover {
 }
 
 .ui-page-form input[type=submit]:hover{
-	border-color: #454545;
+	border-color: #666666;
 	color: white;
 	text-shadow: 1px 1px 2px #222222;
 	
